fixed header showing when user scrolling issues on browse page. Inclusion of overflow: auto at the app level was causing a problem - removed. Rest of app still seem to be working correctly.

--- a/frontend/src/components/BrowsePageParts/fetch-control-panel/FetchControlPanel.css
+++ b/frontend/src/components/BrowsePageParts/fetch-control-panel/FetchControlPanel.css
@@ -8,15 +8,14 @@
 .filter-nav-container.active {
   z-index: 1;
   position: sticky;
-  top: 20px;
-  opacity: 30%;
+  top: 11.5vh;
 }
 
-.filter-nav-container.active-scroll {
+/* .filter-nav-container.active-scroll {
   position: sticky;
   top: 4.8vw;
   z-index: 999;
-}
+} */
 
 .button-container {
   justify-self: start;
