--- a/frontend/src/components/HeaderSharedParts/header/Header.css
+++ b/frontend/src/components/HeaderSharedParts/header/Header.css
@@ -1,31 +1,27 @@
 .header-container {
   display: grid;
-  /* position: top; */
-  height: 9vh;
+  position: sticky;
+  height: 11vh;
   grid-template-columns: 9% 35% 56%;
   min-width: 60vw;
-  /* transition: top 0.5s; */
+  transition: top 0.5s;
 }
 
-.header-container.scroll {
-  /* position: sticky; */
-  /* top: 0;
-  z-index: 99;
-  background-color: antiquewhite; */
-  /* offset-position: 0% -100%; */
-  /* background-color: antiquewhite; */
-  /* transition: 0.5s; */
+.header-container.active {
+  position: sticky;
+  top: 0px;
+  z-index: 1000;
+  background-color: antiquewhite;
+  offset-position: 0% -100%;
+  transition: 0.5s;
 }
 
 .home-button {
-  /* margin-top: 0.5rem; */
-  /* margin: 2%;
-  width: 6%; */
-  /* border-radius: 5px; */
-  background-color: #ffffff00;
-  /* background-color: #ffa500;or background-color: rgba(0, 0, 0, 0); */
+  margin-top: 0.5rem;
+  margin: 2%;
+  width: 6%;
+  border-radius: 5px;
   cursor: pointer;
-  /* border: 0.5px solid #ffa500; */
   border: none;
 }
 
