--- a/frontend/src/components/app/App.css
+++ b/frontend/src/components/app/App.css
@@ -22,7 +22,6 @@ html, body {
   background-position-x: 1000px;
   /* background-size: 60vw; */
   background-repeat: no-repeat;
-  overflow: auto;
   height: 100vh;
   margin: 0;
   padding: 0;
